# casse-briques-prog-avancee-c-plus-plus

./: Compil + installation.txt
casse-briques/: CMakeLists.txt  CMakeLists.txt.old  README.md
casse-briques/src/: main.cpp  main.h  test-sdl-all.cpp
casse-briques/src/game/: app.cpp  app.h  ball.cpp  ball.h  brick.cpp  brick.h  events_handler.cpp  events_handler.h  game_element.cpp  game_element.h  player.cpp  player.h
casse-briques/src/utils/: defs.h  sdl_utils.cpp  sdl_utils.h
